@startuml
left to right direction
skinparam classAttributeIconSize 0
skinparam shadowing false
class BluetoothManager {
}
class CameraPage {
}
class Clavier {
}
class GpsTelemetrySource {
}
class HAPage {
}
class HomeAssistant {
}
class MainWindow {
}
class MediaPage {
}
class Mpu9250Source {
}
class NavigationPage {
}
class SettingsPage {
}
class TelemetryData {
}
class QObject <<external>>
QObject <|-- BluetoothManager
class QWidget <<external>>
QWidget <|-- CameraPage
class QDialog <<external>>
QDialog <|-- Clavier
class QObject <<external>>
QObject <|-- GpsTelemetrySource
class QWebEnginePage <<external>>
QWebEnginePage <|-- HAPage
class QWidget <<external>>
QWidget <|-- HomeAssistant
class QMainWindow <<external>>
QMainWindow <|-- MainWindow
class QWidget <<external>>
QWidget <|-- MediaPage
class QObject <<external>>
QObject <|-- Mpu9250Source
class QWidget <<external>>
QWidget <|-- NavigationPage
class QWidget <<external>>
QWidget <|-- SettingsPage
class QObject <<external>>
QObject <|-- TelemetryData
@enduml